// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderImageOutset renders 0 1`] = `
Array [
  .c0 {
  border-image-outset: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-outset: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-outset: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-outset: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderImageOutset renders function 1`] = `
Array [
  .c0 {
  border-image-outset: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-outset: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-outset: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-outset: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderImageOutset renders invalid theme path 1`] = `
Array [
  .c0 {
  border-image-outset: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-outset: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-outset: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-outset: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderImageOutset renders negative number 1`] = `
Array [
  .c0 {
  border-image-outset: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-outset: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-outset: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-outset: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderImageOutset renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  border-image-outset: July;
}

@media screen and (min-width:November) {
  .c0 {
    border-image-outset: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-outset: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-outset: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-image-outset: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  border-image-outset: July;
}

@media screen and (min-width:November) {
  .c0 {
    border-image-outset: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-outset: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-outset: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-image-outset: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  border-image-outset: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-image-outset: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-outset: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-outset: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-image-outset: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  border-image-outset: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-image-outset: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-outset: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-outset: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-image-outset: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderImageOutset renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-image-outset: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-outset: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-outset: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-image-outset: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-image-outset: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-outset: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-outset: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-image-outset: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-image-outset: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-outset: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-outset: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-image-outset: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-image-outset: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-outset: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-outset: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-image-outset: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderImageOutset renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  border-image-outset: July;
}

@media May {
  .c0 {
    border-image-outset: August;
  }
}

@media April {
  .c0 {
    border-image-outset: September;
  }
}

@media January {
  .c0 {
    border-image-outset: November;
  }
}

@media April {
  .c0 {
    border-image-outset: August;
  }
}

@media June {
  .c0 {
    border-image-outset: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  border-image-outset: July;
}

@media May {
  .c0 {
    border-image-outset: August;
  }
}

@media April {
  .c0 {
    border-image-outset: September;
  }
}

@media January {
  .c0 {
    border-image-outset: November;
  }
}

@media April {
  .c0 {
    border-image-outset: August;
  }
}

@media June {
  .c0 {
    border-image-outset: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  border-image-outset: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-image-outset: November;
  }
}

@media April {
  .c0 {
    border-image-outset: January;
  }
}

@media January {
  .c0 {
    border-image-outset: December;
  }
}

@media April {
  .c0 {
    border-image-outset: April;
  }
}

@media June {
  .c0 {
    border-image-outset: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  border-image-outset: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-image-outset: November;
  }
}

@media April {
  .c0 {
    border-image-outset: January;
  }
}

@media January {
  .c0 {
    border-image-outset: December;
  }
}

@media April {
  .c0 {
    border-image-outset: April;
  }
}

@media June {
  .c0 {
    border-image-outset: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderImageOutset renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    border-image-outset: July;
  }
}

@media April {
  .c0 {
    border-image-outset: August;
  }
}

@media January {
  .c0 {
    border-image-outset: September;
  }
}

@media April {
  .c0 {
    border-image-outset: November;
  }
}

@media June {
  .c0 {
    border-image-outset: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-image-outset: July;
  }
}

@media April {
  .c0 {
    border-image-outset: August;
  }
}

@media January {
  .c0 {
    border-image-outset: September;
  }
}

@media April {
  .c0 {
    border-image-outset: November;
  }
}

@media June {
  .c0 {
    border-image-outset: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-image-outset: January;
  }
}

@media April {
  .c0 {
    border-image-outset: December;
  }
}

@media January {
  .c0 {
    border-image-outset: April;
  }
}

@media April {
  .c0 {
    border-image-outset: May;
  }
}

@media June {
  .c0 {
    border-image-outset: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-image-outset: January;
  }
}

@media April {
  .c0 {
    border-image-outset: December;
  }
}

@media January {
  .c0 {
    border-image-outset: April;
  }
}

@media April {
  .c0 {
    border-image-outset: May;
  }
}

@media June {
  .c0 {
    border-image-outset: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderImageOutset renders postitive number 1`] = `
Array [
  .c0 {
  border-image-outset: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-outset: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-outset: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-outset: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderImageOutset renders string 1`] = `
Array [
  .c0 {
  border-image-outset: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-outset: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-outset: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-outset: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderImageOutset renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`borderImageOutset renders valid theme path 1`] = `
Array [
  .c0 {
  border-image-outset: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-outset: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-outset: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-outset: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
